[metadata]
name = meme-errors
version = 0.1.6
author = Jay Gogra
author_email = pyex1.1@gmail.com
description = Play funny meme sounds when Python errors occur!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JAY-MU-4098/meme_errors
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    pygame

[options.packages.find]
where = .
